--- a/FirstWebsite.HTML
+++ b/FirstWebsite.HTML
@@ -7,7 +7,7 @@
 
     <h1> Big heading</h1>
 
-    <p>This is a <b>paragraph!</b></p>
+    <p>This is a <b>paragraph</b></p>
     <a href="https://google.com" target="_blank" title="Joe Mama"> I'm a link</a>
     <p>My name is:<br>
         Bruh</p>
